2010-05-16  Alan McGovern  <amcgovern@novell.com>

	* value.cpp:
	* value.h.in: Add a value_delete_value which we can use in our
	  ghashtable dtors.

	* provider.cpp: Use value_delete_value, not value_free_value.
	  We do actually want the value* itself freed :)

	* dependencyproperty.h:
	* dependencyproperty.cpp: Use value_delete_value instead of a
	  custom 'free_value' function for the default value overrides
	  table.

	* dependencyobject.cpp: The local_values hash should use
	  value_delete_value too.

2010-05-14  Jeffrey Stedfast  <fejj@novell.com>

	* provider.cpp (InheritedPropertyValueProvider::MapPropertyToDescendant):
	Fix mappings for FlowDirection and Language properties.
	(propagate_to_inlines): Don't proagate to children who don't
	support the property. Also fixed to recurse and children that
	contain inlines or blocks themselves.
	(propagate_to_blocks): Similar to proagate_to_inlines().
	(InheritedPropertyValueProvider::PropagateInheritedProperty):
	Handle Sections too.

2010-05-14  Alan McGovern  <amcgovern@novell.com>

	* provider.h:
	* provider.cpp:
	* dependencyobject.h:
	* frameworkelement.cpp:
	* dependencyobject.cpp: Remove duplicate and incorrect code
	  when cleaing up the various PropertyValueProviders and make
	  them all use DependencyObject::dispose_value instead. Also
	  instantiate all our hashtables with the value_free_value to
	  make absolutely sure we never forget to delete the value.

2010-05-13  Chris Toshok  <toshok@ximian.com>

	* runtime.cpp (Surface::Paint): delete render_list and ctx after
	we're done with them.

	* provider.cpp (RecomputePropertyValue): don't ref Setters and
	cause them to leak.

	* dependencyobject.cpp (SetName): don't leak the name Value*.

2010-05-13  Chris Toshok  <toshok@ximian.com>

	* value.cpp (Value::Copy): implement for MANAGED by creating a new
	gchandle for the target.
	(Value::FreeValue): implement for MANAGED by freeing the gchandle.

2010-05-13  Jeffrey Stedfast  <fejj@novell.com>
