@@ -238,7 +238,10 @@ void value_free_value (Value *value);
 /* @GeneratePInvoke */
 void value_free_value2 (/* @MarshalAs=IntPtr */ Value *value);
 
+/* @GeneratePInvoke */
 void value_delete_value (Value *value);
+/* @GeneratePInvoke */
+void value_delete_value2 (/* @MarshalAs=IntPtr */ Value *value);
 G_END_DECLS
 
 
